# mlops-platform

./: .env.example  .gitignore  README.md  alert_rules.yml  dagster.yaml  docker-compose.yml  prometheus.yml  pyproject.toml
data/: sample_data.csv
docker/: Dockerfile.dagster  Dockerfile.dagster_metrics  Dockerfile.drift  Dockerfile.mlflow
docs/: ai_prompt_log.md  autoscaling.md
grafana/dashboards/: mlops-observability.json
grafana/provisioning/dashboards/: mlops.yml
infrastructure/terraform/: main.tf
mlops_platform/: __init__.py
monitoring/: dagster_metrics_exporter.py  drift_monitor.py
pipelines/: ml_pipeline.py
scripts/: build-all.sh  decommission.sh  rebuild-infra.sh  rebuild-pipeline.sh
