[project]
name = "mlops-platform"
version = "0.1.0"
description = "MLOps platform with Dagster and MLflow"
requires-python = ">=3.11"
dependencies = [
    "dagster==1.7.0",
    "dagster-webserver==1.7.0",
    "dagster-postgres==0.23.0",
    "dagster-aws==0.23.0",
    "mlflow==2.15.1",
    "pandas>=2.0.0",
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]